This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/30/28: Fixed "Use V in LD" parameter used when running Eucentricity by Focus
from the setup dialog, and renamed the menu item that opens the setup dialog.

4/27/24: Added script command to run Calibrate High-DeFocus Mag routine.

4/26/24: Added argument to ParamSetToUseForMontage to apply it to next montage
opened through script.

4/22/24: SEM_4-2-0beta6
4/22/24: SEM_4-1-10
4/20/24: Changed how SEM-AutoIT selects an aperture size on Windows 10 so it
now works on Glacios (In 4.1).

4/20/24: Fixed initial assignment of fallback rotation angles to go between
mag ranges instead of leaving one range unassigned (In 4.1).

4/19/24: Added ability to call some general plugin functions from Python.

4/18/24: Added script commands for reporting and setting the variable
governing the components of the frame filename.

4/18/23: Allowed hexadecimal values (starting with 0x) to be entered in script
commands when an integer is expected, making it easier to set flag values.

4/16/24: Added option to disable trimming of dark borders to the Navigator
Align Setup dialog, duplicating one entry in the specialized option for this.

4/16/24: SEM_4-1-9
4/16/24: Added routine to realign to a reloaded grid and transform Navigator
items to a new registration.

4/16/24: Fixed extensions added when SaveLog command is used with no
extension on the name.

4/16/24: Added support for frame handling from AMT cameras.

4/13/24: Fixed function to get advanced scripting version in FEI server.

4/12/24: SEM_4-2-0beta5
4/12/24: Added mechanism for a plugin to set up a script to run once when
program is idle.

4/12/24: Made montage fitting to an area try Search as well as View in Low