@@ -33,7 +33,8 @@
       outside a calibrated range. Press the Reset button to zero the cumulative dose.</P>
     <P><strong>Microscope imaging mode</strong></P>
     <P>There is a text indicator of whether the microscpe is in TEM, EFTEM, STEM, or 
-      diffraction.</P>
+      diffraction.&nbsp; On a JEOL with alpha, the background color may reflect vacuum 
+      quality, as described below.</P>
     <P><B>Magnification (X)</B></P>
     <P>This readout shows the current magnification, or camera length in diffraction mode.
       On a Thermo/FEI scope, it changes when the screen is
@@ -64,10 +65,13 @@
     <P><B>Objective Lens Strength (Obj)</B></P>
     <P>This readout shows the objective lens strength in percent, and will match the
       value shown in the microscope interface on a Thermo/FEI scope.</P>
-    <P><B>Vacuum Quality (VAC, Thermo/FEI only)</B></P>
+    <P><B>Vacuum Quality (VAC, Thermo/FEI and JEOL without alpha)</B></P>
     <P>This is an indicator of vacuum quality that may alert you to watch the actual
-      vacuum readings in the Thermo/FEI interface. It should be set up so that green means near perfect,
-      yellow means adequate for working, and red means do not open the column values.</P>
+      vacuum readings in the microscope interface. It should be set up so that green means near perfect,
+      yellow means adequate for working, and red means do not open the column values.&nbsp; 
+      On a JEOL configured to access a vacuum gauge during updates of the microscope 
+      state, the color will show up here if there is no alpha, or on the imaging mode 
+      indicator if there is.</P>
     <P><strong>Alpha (JEOL only)</strong></P>
     <P>On a JEOL with alpha values, this readout shows the alpha value after the 
       letter &#39;a&#39;.</P>
