@@ -2522,7 +2522,7 @@
             in 'ReportFrameNameFormat'.&nbsp; Set <b>#K</b> to 1 to keep the change after the script ends, 
               otherwise the original format will be restored.&nbsp; Set <b>#S</b> to 1 to set the bits listed in <b>#B</b>, 
               0 to clear them, or -1 to set the format variable to just what is given in <B>#B</B> (such
-               as if restoring a value saved from 'ReportFrameNameFormat').&nbsp; <#B> can be entered as a single hex
+               as if restoring a value saved from 'ReportFrameNameFormat').&nbsp; <B>#B</B> can be entered as a single hex
               number starting with 0x as above, or as a sum of hex numbers (as can any integer 
               entry).&nbsp; Command added in 4.2, 18-Apr-24.</b></TD>
         </TR>
